# image_proc_labs

./: .gitignore  CMakeLists.txt  main.cpp
image_io/: stb_image.cpp  stb_image.h  stb_image_write.cpp  stb_image_write.h
laba1/: CMakeLists.txt  main.cpp
laba1/imageProcessing_laba1/imageProcessing_laba1/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
laba1/imageProcessing_laba1/imageProcessing_laba1.xcodeproj/: project.pbxproj
laba1/imageProcessing_laba1/imageProcessing_laba1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
laba1/imageProcessing_laba1/imageProcessing_laba1.xcodeproj/project.xcworkspace/xcuserdata/vkraevskiy.xcuserdatad/: UserInterfaceState.xcuserstate
laba1/imageProcessing_laba1/imageProcessing_laba1.xcodeproj/xcuserdata/vkraevskiy.xcuserdatad/xcschemes/: xcschememanagement.plist
laba1/imageProcessing_laba1/imageProcessing_laba1/Base.lproj/: Main.storyboard
laba2/: CMakeLists.txt  main.cpp
labs.xcworkspace/: contents.xcworkspacedata
labs.xcworkspace/xcuserdata/vkraevskiy.xcuserdatad/: UserInterfaceState.xcuserstate
